--- a/index.html
+++ b/index.html
@@ -1,122 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-    <title>Chess Board HTML5</title>
+<head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <title>Checker Board</title>
 </head>
 <body>
-    <div class="box">
-        <div class="centered">
-        <table class="checkerBoard">
-        <tbody>
-         <tr>
-          <th>8</th>
-          <td id="a8"></td>
-          <td id="b8"><div><img class="checkerBlack" src="black.jpg"></div></td>
-          <td id="c8"></td>
-          <td id="d8"><div><img class="checkerBlack" src="black.jpg"></div></td>
-          <td id="e8"></td>
-          <td id="f8"><div><img class="checkerBlack" src="black.jpg"></div></td>
-          <td id="g8"></td>
-          <td id="h8"><div><img class="checkerBlack" src="black.jpg"></div></td>
-         </tr>
-         <tr>
-          <th>7</th>
-          <td id="a7"><div><img class="checkerBlack" src="black.jpg"></div></td>
-          <td id="b7"></td>
-          <td id="c7"><div><img class="checkerBlack" src="black.jpg"></div></td>
-          <td id="d7"></td>
-          <td id="e7"><div><img class="checkerBlack" src="black.jpg"></div></td>
-          <td id="f7"></td>
-          <td id="g7"><div><img class="checkerBlack" src="black.jpg"></div></td>
-          <td id="h7"></td>
-         </tr>
-         <tr>
-          <th>6</th>
-          <td id="a6"></td>
-          <td id="b6"><div><img class="checkerBlack" src="black.jpg"></div></td>
-          <td id="c6"></td>
-          <td id="d6"><div><img class="checkerBlack" src="black.jpg"></div></td>
-          <td id="e6"></td>
-          <td id="f6"><div><img class="checkerBlack" src="black.jpg"></div></td>
-          <td id="g6"></td>
-          <td id="h6"><div><img class="checkerBlack" src="black.jpg"></div></td>
-         </tr>
-         <tr>
-          <th>5</th>
-          <td id="a5"></td>
-          <td id="b5"></td>
-          <td id="c5"></td>
-          <td id="d5"></td>
-          <td id="e5"></td>
-          <td id="f5"></td>
-          <td id="g5"></td>
-          <td id="h5"></td>
-         </tr>
-         <tr>
-          <th>4</th>
-          <td id="a4"></td>
-          <td id="b4"></td>
-          <td id="c4"></td>
-          <td id="d4"></td>
-          <td id="e4"></td>
-          <td id="f4"></td>
-          <td id="g4"></td>
-          <td id="h4"></td>
-         </tr>
-         <tr>
-          <th>3</th>
-          <td id="a3"><div><img class="checkerWhite" src="white.jpg"></div></td>
-          <td id="b3"></td>
-          <td id="c3"><div><img class="checkerWhite" src="white.jpg"></div></td>
-          <td id="d3"></td>
-          <td id="e3"><div><img class="checkerWhite" src="white.jpg"></div></td>
-          <td id="f3"></td>
-          <td id="g3"><div><img class="checkerWhite" src="white.jpg"></div></td>
-          <td id="h3"></td>
-         </tr>
-         <tr>
-          <th>2</th>
-          <td id="a2"></td>
-          <td id="b2"><div><img class="checkerWhite" src="white.jpg"></div></td>
-          <td id="c2"></td>
-          <td id="d2"><div><img class="checkerWhite" src="white.jpg"></div></td>
-          <td id="e2"></td>
-          <td id="f2"><div><img class="checkerWhite" src="white.jpg"></div></td>
-          <td id="g2"></td>
-          <td id="h2"><div><img class="checkerWhite" src="white.jpg"></div></td>
-         </tr>
-         <tr>
-          <th>1</th>
-          <td id="a1"><img class="checkerWhite" src="white.jpg"></td>
-          <td id="b1"></td>
-          <td id="c1"><div><img class="checkerWhite" src="white.jpg"></div></td>
-          <td id="d1"></td>
-          <td id="e1"><div><img class="checkerWhite" src="white.jpg"></div></td>
-          <td id="f1"></td>
-          <td id="g1"><div><img class="checkerWhite" src="white.jpg"></div></td>
-          <td id="h1"></td>
-         </tr>
-         <tr>
-          <th></th>
-          <th>a</th>
-          <th>b</th>
-          <th>c</th>
-          <th>d</th>
-          <th>e</th>
-          <th>f</th>
-          <th>g</th>
-          <th>h</th>
-         </tr>
-        </tbody>
-       </table>
-    <div class="whiteText">
-        Ход Белых
-    </div>
-    <p id="divider">|</p>
-    <div class="blackText">
-        Ход Черных
-    </div>
+    <main>
+        <table class="board">
+            <tr>
+                <td class="noneChecker"></td>
+                <td><p class="checkerWhite" id="0"></p></td>
+                <td class="noneChecker"></td>
+                <td><p class="checkerWhite" id="1"></p></td>
+                <td class="noneChecker"></td>
+                <td><p class="checkerWhite" id="2"></p></td>
+                <td class="noneChecker"></td>
+                <td><p class="checkerWhite" id="3"></p></td>
+            </tr>
+            <tr>
+                <td><p class="checkerWhite" id="4"></p></td>
+                <td class="noneChecker"></td>
+                <td><p class="checkerWhite" id="5"></p></td>
+                <td class="noneChecker"></td>
+                <td><p class="checkerWhite" id="6"></p></td>
+                <td class="noneChecker"></td>
+                <td><p class="checkerWhite" id="7"></p></td>
+                <td class="noneChecker"></td>
+            </tr>
+            <tr>
+                <td class="noneChecker"></td>
+                <td><p class="checkerWhite" id="8"></p></td>
+                <td class="noneChecker"></td>
+                <td><p class="checkerWhite" id="9"></p></td>
+                <td class="noneChecker"></td>
+                <td><p class="checkerWhite" id="10"></p></td>
+                <td class="noneChecker"></td>
+                <td><p class="checkerWhite" id="11"></p></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td class="noneChecker"></td>
+                <td></td>
+                <td class="noneChecker"></td>
+                <td></td>
+                <td class="noneChecker"></td>
+                <td></td>
+                <td class="noneChecker"></td>
+            </tr>
+            <tr>
+                <td class="noneChecker"></td>
+                <td></td>
+                <td class="noneChecker"></td>
+                <td></td>
+                <td class="noneChecker"></td>
+                <td></td>
+                <td class="noneChecker"></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td><span class="checkerBlack" id="12"></span></td>
+                <td class="noneChecker"></td>
+                <td><span class="checkerBlack" id="13"></span></td>
+                <td class="noneChecker"></td>
+                <td><span class="checkerBlack" id="14"></span></td>
+                <td class="noneChecker"></td>
+                <td><span class="checkerBlack" id="15"></span></td>
+                <td class="noneChecker"></td>
+            </tr>
+            <tr>
+                <td class="noneChecker"></td>
+                <td><span class="checkerBlack" id="16"></span></td>
+                <td class="noneChecker"></td>
+                <td><span class="checkerBlack" id="17"></span></td>
+                <td class="noneChecker"></td>
+                <td><span class="checkerBlack" id="18"></span></td>
+                <td class="noneChecker"></td>
+                <td><span class="checkerBlack" id="19"></span></td>
+            </tr>
+            <tr>
+                <td><span class="checkerBlack" id="20"></span></td>
+                <td class="noneChecker"></td>
+                <td><span class="checkerBlack" id="21"></span></td>
+                <td class="noneChecker">
+                <td><span class="checkerBlack" id="22"></span></td>
+                <td class="noneChecker"></td>
+                <td><span class="checkerBlack" id="23"></span></td>
+                <td class="noneChecker"></td>
+            </tr>
+        </table>
+        <div class="desktop">
+            <div class="whiteText">
+                White turn
+            </div>
+            <p id="divider">|</p>
+            <div class="blackText">
+                Blacks turn
+            </div>
+    </main>
     <script src="script.js"></script>
- </body>
+</body>
 </html>
